syntax = "proto3";

package auth;

service Auth {
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
}

message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message SignUpRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message SignUpResponse { string message = 1; }